static/style.css
body{
    background-image: linear-gradient(#100722,#083649);
    padding: 2em;
    min-height: 100vh;
    padding-top: 0px;
    padding-bottom: 0px;
    width: 100vw;
    margin: 0px;
}
*:focus {
    outline: none;
}
.top-nav{
    margin-top: 1em;
    background-color: #100722;
    width: 100%;
    position: fixed;
    z-index: 1;
    top: 0px;
    color: aliceblue;
    font-family: Bruno Ace;
}
.input-section{
    position: fixed;
    bottom: 1em;
    margin-bottom: 2em;
    border-radius: 96px;
    background-clip: padding-box;
    width: 70vw;
}
/* .input-section::after{
    position: absolute;
    top: -2px; bottom: -2px;
    left: -2px; right: -2px;
    background: linear-gradient(to left,#054A53,#AFA9CD);
    content: '';
    z-index: -1;
    border-radius: 96px;
} */
input,textarea{
    border: 0;
}
#main{
    color: #fff;
    background-color: #182036;
    border-radius: 96px;
    padding: 1.3rem;
    width: 100%;
}
.input-area{
    display: flex;
    flex-direction: row;
    justify-content: center;
}
.chat-bubble{
    position: relative;
    background-color: #182036;
    border-radius: 96px;
    border-bottom-right-radius: 0px;
    padding: 1em;
    background-clip: padding-box;
    scrollbar-width: none;
}
.chat-bubble::after{
    position: absolute;
    top: -2px; bottom: -2px;
    left: -2px; right: -2px;
    background: linear-gradient(to left,#054A53,#AFA9CD);
    content: '';
    z-index: -1;
    border-radius: 96px;
    border-bottom-right-radius: 0px;
}
.chat-row{
    display: flex;
    margin-top: 1em;
    width: 100%;
    flex-direction: row;
    justify-content: end;
    height: auto;
}
.chat-system {
    height: 80vh;
    display: flex;
    flex-direction: column;
    width: 100%;
    overflow: hidden;
}

.chat-area {
    flex: 1;
    color: #fff;
    padding: 1em;
    padding-top: 3em;
    display: flex;
    margin-top: 3em;
    flex-direction: column ;
    justify-content: flex-start;/*needs flex-end; to show desired outcome*/
    overflow-y: auto; 
    height: 100%;
    width: 100%;
    scrollbar-width:none;
}
.chat-ai-row{
    margin-top: 3em;
    display: flex;
    flex-direction: row;
    width: 100%;    
    justify-content: start;
    height: auto;
}
.chat-ai-response{
    position: relative;
    width: 100%;
    padding: 1em;
    color: #fff;
}
.pre-wrap{
    white-space: pre-wrap;
}

